--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ import KeyboardManager from "@/components/KeyboardManager.astro";
 import ThemeSwitch from "@/components/ThemeSwitch.astro";
 
 import { basics } from "@cv";
+import Volunteer from "@/components/sections/Volunteer.astro";
 const { name, label } = basics;
 ---
 
@@ -27,6 +28,7 @@ const { name, label } = basics;
 			<Projects className="print:hidden" />
 			<Skills className="print:hidden" />
 			<Education className="order-first" />
+			<Volunteer className="print:col-span-3" />
 		</div>
 		<Tail />
 	</main>
