--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -18,6 +18,9 @@ import Kotlin from "@/icons/kotlin.astro";
 import Flutter from "@/icons/flutter.astro";
 import Figma from "@/icons/Figma.astro";
 import Gitlab from "@/icons/Gitlab.astro";
+import Svelte from "@/icons/Svelte.astro";
+import Spring from "@/icons/Spring.astro";
+import SpringSecurity from "@/icons/SpringSecurity.astro";
 
 const SKILLS_ICONS: Record<string, any> = {
 	HTML,
@@ -37,22 +40,30 @@ const SKILLS_ICONS: Record<string, any> = {
 	Flutter,
 	Figma,
 	Gitlab,
+	Svelte,
+	Spring,
+	SpringSecurity,
 };
+
+
 ---
 
 <Section className={Astro.props.className} title="Skills">
-	<ul class="[&>li>svg]:text-skin-hue inline-flex flex-wrap gap-6 [&>li>svg]:size-5 [&>li]:text-sm">
-		{
-			skills.map(({ name }) => {
-				const iconName = name === "Next.js" ? "Next" : name;
-				const Icon = SKILLS_ICONS[iconName];
+  {Object.entries(skills).map(([category, skills2]) => (
+    <div>
+      <h3 class="mb-2 text-lg ">{category.charAt(0).toUpperCase() + category.slice(1)}</h3>
+      <ul class="[&>li>svg]:text-skin-hue inline-flex flex-wrap gap-6 [&>li>svg]:size-5 [&>li]:text-sm">
+        {skills2.map(({ name }) => {
+          const iconName = name === "Next.js" ? "Next" : name;
+          const Icon = SKILLS_ICONS[iconName];
 
-				return (
-					<li class="border-skin-hue/20s bg-skin-button-accent/20s borders border-solids flex items-center gap-1 rounded-md px-2 py-0.5 text-xs text-skin-muted print:border-none print:bg-transparent print:p-0 print:text-zinc-800">
-						{Icon && <Icon />} <span>{name}</span>
-					</li>
-				);
-			})
-		}
-	</ul>
+          return (
+            <li class="border-skin-hue/20s bg-skin-button-accent/20s borders border-solids flex items-center gap-1 rounded-md px-2 py-0.5 text-xs text-skin-muted print:border-none print:bg-transparent print:p-0 print:text-zinc-800">
+              {Icon && <Icon />} <span class="font-semibold pl-1">{name}</span>
+            </li>
+          );
+        })}
+      </ul>
+    </div>
+  ))}
 </Section>
