--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -2,21 +2,36 @@
 import Section from "../Section.astro"
 import { work } from "@cv"
 
-import HTML from "@/icons/html.astro"
-import CSS from "@/icons/css.astro"
-import JavaScript from "@/icons/javascript.astro"
-import TypeScript from "@/icons/type.astro"
-import React from "@/icons/react.astro"
-import Node from "@/icons/node.astro"
-import MySQL from "@/icons/sql.astro"
-import Git from "@/icons/git.astro"
-import GitHub from "@/icons/GitHub.astro"
-import Tailwind from "@/icons/tailwind.astro"
-import Next from "@/icons/next.astro"
-import Swift from "@/icons/swift.astro"
-import SwiftUI from "@/icons/swiftui.astro"
-import Kotlin from "@/icons/kotlin.astro"
-import Flutter from "@/icons/flutter.astro"
+import HTML from "@/icons/html.astro";
+import CSS from "@/icons/css.astro";
+import JavaScript from "@/icons/javascript.astro";
+import TypeScript from "@/icons/type.astro";
+import React from "@/icons/react.astro";
+import Node from "@/icons/node.astro";
+import MySQL from "@/icons/sql.astro";
+import Git from "@/icons/git.astro";
+import GitHub from "@/icons/GitHub.astro";
+import Tailwind from "@/icons/tailwind.astro";
+import Next from "@/icons/next.astro";
+import Swift from "@/icons/swift.astro";
+import SwiftUI from "@/icons/swiftui.astro";
+import Kotlin from "@/icons/kotlin.astro";
+import Flutter from "@/icons/flutter.astro";
+import Figma from "@/icons/Figma.astro";
+import Gitlab from "@/icons/Gitlab.astro";
+import Svelte from "@/icons/Svelte.astro";
+import Spring from "@/icons/Spring.astro";
+import SpringSecurity from "@/icons/SpringSecurity.astro";
+import Slack from "@/icons/Slack.astro";
+import Python from "@/icons/Python.astro";
+import Java from "@/icons/Java.astro";
+import C from "@/icons/C.astro";
+import Cpp from "@/icons/C++.astro";
+import R from "@/icons/R.astro";
+import Jira from "@/icons/Jira.astro";
+import Docker from "@/icons/Docker.astro";
+import Proxmox from "@/icons/Proxmox.astro";
+import Openshift from "@/icons/OpenShift.astro";
 
 const SKILLS_ICONS: Record<string, any> = {
   HTML,
@@ -34,6 +49,10 @@ const SKILLS_ICONS: Record<string, any> = {
   SwiftUI,
   Kotlin,
   Flutter,
+  Slack,
+  Figma,
+  Java,
+  C,
 }
 ---
 <Section className={Astro.props.className} title="Experience">
