--- a/src/components/sections/Education.astro
+++ b/src/components/sections/Education.astro
@@ -8,7 +8,7 @@ import { certificates } from "@cv";
 <Section className={Astro.props.className} title="Education">
 	<ul class="space-y-4 py-3 print:space-y-0">
 		{
-			education.map(({ institution, startDate, endDate, area, url }) => {
+			education.map(({ institution, startDate, endDate, area, url, studyType }) => {
 				const startYear = new Date(startDate).getFullYear();
 				const endYear = endDate != null ? new Date(endDate).getFullYear() : "Actual";
 				const years = `${startYear} - ${endYear}`;
@@ -26,7 +26,7 @@ import { certificates } from "@cv";
 									{institution}
 								</a>
 							</h3>
-							<div class="text-sm text-skin-muted">{area}</div>
+							<div class="text-sm text-skin-muted">{area}, {studyType}</div>
 							<time class="right-0 top-0 text-xs text-skin-muted md:absolute md:block">{years}</time>
 						</div>
 					</div>
