--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -1,5 +1,7 @@
 ---
 import Section from "../Section.astro";
+import { skills } from "@cv";
+
 import HTML from "@/icons/html.astro";
 import CSS from "@/icons/css.astro";
 import JavaScript from "@/icons/javascript.astro";
@@ -11,7 +13,6 @@ import Git from "@/icons/git.astro";
 import GitHub from "@/icons/GitHub.astro";
 import Tailwind from "@/icons/tailwind.astro";
 import Next from "@/icons/next.astro";
-import { skills } from "@cv";
 import Swift from "@/icons/swift.astro";
 import SwiftUI from "@/icons/swiftui.astro";
 import Kotlin from "@/icons/kotlin.astro";
@@ -21,6 +22,16 @@ import Gitlab from "@/icons/Gitlab.astro";
 import Svelte from "@/icons/Svelte.astro";
 import Spring from "@/icons/Spring.astro";
 import SpringSecurity from "@/icons/SpringSecurity.astro";
+import Slack from "@/icons/Slack.astro";
+import Python from "@/icons/Python.astro";
+import Java from "@/icons/Java.astro";
+import C from "@/icons/C.astro";
+import Cpp from "@/icons/C++.astro";
+import R from "@/icons/R.astro";
+import Jira from "@/icons/Jira.astro";
+import Docker from "@/icons/Docker.astro";
+import Proxmox from "@/icons/Proxmox.astro";
+import Openshift from "@/icons/OpenShift.astro";
 
 const SKILLS_ICONS: Record<string, any> = {
 	HTML,
@@ -43,6 +54,16 @@ const SKILLS_ICONS: Record<string, any> = {
 	Svelte,
 	Spring,
 	SpringSecurity,
+	Slack,
+	Python,
+	Java,
+	C,
+	Cpp,
+	R,
+	Jira,
+	Docker,
+	Proxmox,
+	Openshift,
 };
 
 
@@ -54,7 +75,8 @@ const SKILLS_ICONS: Record<string, any> = {
       <h3 class="mb-2 text-lg ">{category.charAt(0).toUpperCase() + category.slice(1)}</h3>
       <ul class="[&>li>svg]:text-skin-hue inline-flex flex-wrap gap-6 [&>li>svg]:size-5 [&>li]:text-sm">
         {skills2.map(({ name }) => {
-          const iconName = name === "Next.js" ? "Next" : name;
+          let iconName = name === "Next.js" ? "Next" : name;
+			 iconName = name === "C++" ? "Cpp" : name;
           const Icon = SKILLS_ICONS[iconName];
 
           return (
